handle feedback and fix security