@@ -1,6 +1,7 @@
 package com.axonivy.market.service.impl;
 
 import com.axonivy.market.BaseSetup;
+import com.axonivy.market.constants.CommonConstants;
 import com.axonivy.market.entity.Artifact;
 import com.axonivy.market.entity.ExternalDocumentMeta;
 import com.axonivy.market.entity.Product;
@@ -31,12 +32,17 @@ import java.util.Map;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @TestPropertySource("classpath:application-test.properties")
 @SpringBootTest
 class ExternalDocumentServiceImplTest extends BaseSetup {
-
+  private static final String TEST_VERSION_12_5 = "12.5";
+  private static final String VERSION_INVALID = "99.0";
+  private static final String NON_EXISTENT_PRODUCT = "nonexistent";
 
   private static final String RELATIVE_WORKING_LOCATION = "/market-cache/portal/10.0.0/doc";
   private static final String RELATIVE_DOC_LOCATION = RELATIVE_WORKING_LOCATION + "/index.html";
@@ -47,9 +53,9 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
   private static final String LATEST_VERSION = "latest";
   private static final String EN_LANG = "en";
   private static final String DOC_DIR = "doc";
-  private static final String BASE_PATH = "/" + PORTAL + "/" + ARTIFACT_NAME + "/";
+  private static final String BASE_PATH = CommonConstants.SLASH + PORTAL + CommonConstants.SLASH + ARTIFACT_NAME + CommonConstants.SLASH;
 
-  private final List<String> majorVersions = List.of("10.0", "12.0", "13.1", "dev");
+  private final List<String> majorVersions = List.of(TEST_VERSION, TEST_VERSION, "13.1", DEV_VERSION);
 
   @MockBean
   ProductRepository productRepository;
@@ -71,7 +77,6 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
 
   @TempDir
   Path tempDir;
-
   @BeforeEach
   void setup() {
     when(axonIvyClient.getDocumentVersions()).thenReturn(majorVersions);
@@ -180,16 +185,16 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
 
   @Test
   void testFindExternalDocumentURI() {
-    var mockVersion = "10.0";
+  var mockVersion = TEST_VERSION;
     var mockProductDocumentMeta = new ExternalDocumentMeta();
-    when(productRepository.findById(PORTAL)).thenReturn(mockPortalProduct());
+  when(productRepository.findById(PORTAL)).thenReturn(mockPortalProduct());
     var result = service.findExternalDocument(PORTAL, mockVersion);
     verify(productRepository, times(1)).findById(any());
     assertNull(result, "Expected result to be null when no matching document meta exists");
 
-    mockProductDocumentMeta.setProductId(PORTAL);
-    mockProductDocumentMeta.setVersion(mockVersion);
-    mockProductDocumentMeta.setRelativeLink(RELATIVE_DOC_LOCATION);
+  mockProductDocumentMeta.setProductId(PORTAL);
+  mockProductDocumentMeta.setVersion(mockVersion);
+  mockProductDocumentMeta.setRelativeLink(RELATIVE_DOC_LOCATION);
     when(externalDocumentMetaRepository.findByProductIdAndLanguage(PORTAL, DocumentLanguage.ENGLISH))
         .thenReturn(List.of(mockProductDocumentMeta));
     result = service.findExternalDocument(PORTAL, mockVersion);
@@ -290,7 +295,7 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
   void testDoesDocExistInShareFolder_ExistsWithFiles() throws IOException {
     Path testDir = tempDir.resolve("doc-folder");
     Files.createDirectories(testDir);
-    Files.createFile(testDir.resolve("index.html"));
+    Files.createFile(testDir.resolve(CommonConstants.INDEX_HTML));
 
     boolean result = service.doesDocExistInShareFolder(testDir.toString());
 
@@ -317,25 +322,22 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
   }
 
   @Test
-
   void testResolveBestMatchRedirectUrl_DevVersion() {
-    String path = BASE_PATH + DEV_VERSION + "/" + DOC_DIR + "/" + EN_LANG + "/index.html";
+    String path = BASE_PATH + DEV_VERSION + CommonConstants.SLASH + DOC_DIR + CommonConstants.SLASH + EN_LANG + "/index.html";
     String result = service.resolveBestMatchRedirectUrl(path);
     assertNotNull(result, "Should return valid path for dev version");
     assertTrue(result.contains(DEV_VERSION), "Should contain dev in path");
   }
 
   @Test
-
   void testResolveBestMatchRedirectUrl_LatestVersion() {
-    String path = BASE_PATH + LATEST_VERSION + "/" + DOC_DIR + "/" + EN_LANG + "/index.html";
+    String path = BASE_PATH + LATEST_VERSION + CommonConstants.SLASH + DOC_DIR + CommonConstants.SLASH + EN_LANG + "/index.html";
     String result = service.resolveBestMatchRedirectUrl(path);
     assertNotNull(result, "Should return valid path for latest version");
     assertTrue(result.contains(LATEST_VERSION), "Should contain latest in path");
   }
 
   @Test
-
   void testResolveBestMatchRedirectUrl_MissingProductName() {
     String path = "/market-cache//" + ARTIFACT_NAME + "/10.0/" + EN_LANG + "/index.html";
     String result = service.resolveBestMatchRedirectUrl(path);
@@ -343,7 +345,6 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
   }
 
   @Test
-
   void testResolveBestMatchRedirectUrl_MissingArtifactName() {
     String path = "/market-cache/" + PORTAL + "//10.0/" + EN_LANG + "/index.html";
     String result = service.resolveBestMatchRedirectUrl(path);
@@ -351,28 +352,27 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
   }
 
   @Test
-
   void testResolveBestMatchRedirectUrl_WithBestMatchVersion() {
-    String path = BASE_PATH + "10.5/" + DOC_DIR + "/" + EN_LANG + "/index.html";
+  String path = BASE_PATH + TEST_VERSION_12_5 + CommonConstants.SLASH + DOC_DIR + CommonConstants.SLASH + EN_LANG + "/index.html";
     when(productRepository.findById(PORTAL)).thenReturn(Optional.of(new Product()));
-    ExternalDocumentMeta meta = ExternalDocumentMeta.builder()
-        .version("10.0")
-        .productId(PORTAL)
-        .artifactName(ARTIFACT_NAME)
-        .build();
+  ExternalDocumentMeta meta = ExternalDocumentMeta.builder()
+    .version(TEST_VERSION)
+    .productId(PORTAL)
+    .artifactName(ARTIFACT_NAME)
+    .build();
     when(externalDocumentMetaRepository.findByProductId(PORTAL))
         .thenReturn(List.of(meta));
 
-    try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
-      mockedVersionFactory.when(() -> VersionFactory.get(any(), eq("10.5")))
-          .thenReturn(null);
-      mockedVersionFactory.when(() -> VersionFactory.get(any(List.class), eq("10.5")))
-          .thenReturn("10.0");
+  try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
+    mockedVersionFactory.when(() -> VersionFactory.get(any(), eq(TEST_VERSION_12_5)))
+      .thenReturn(null);
+    mockedVersionFactory.when(() -> VersionFactory.get(any(List.class), eq(TEST_VERSION_12_5)))
+      .thenReturn(TEST_VERSION);
 
       String result = service.resolveBestMatchRedirectUrl(path);
 
       assertNotNull(result, "Should return valid path");
-      assertTrue(result.contains("10.0"), "Should contain matched version");
+  assertTrue(result.contains(TEST_VERSION), "Should contain matched version");
     }
   }
 
@@ -387,16 +387,16 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
     Path docDir = versionDir.resolve("doc");
     Files.createDirectories(docDir);
 
-    String result = service.createSymlinkForMajorVersion(docDir, "1.0");
+    String result = service.createSymlinkForMajorVersion(docDir, TEST_VERSION);
 
     assertNotNull(result, "Should return symlink path");
-    assertTrue(result.contains("1.0"), "Should contain major version");
+    assertTrue(result.contains(TEST_VERSION), "Should contain major version");
     assertTrue(Files.exists(Paths.get(result)), "Symlink should exist");
   }
 
   @Test
   void testCreateSymlinkForMajorVersion_InvalidInput() {
-    String result = service.createSymlinkForMajorVersion(null, "1.0");
+    String result = service.createSymlinkForMajorVersion(null, TEST_VERSION);
     assertEquals("", result, "Should return empty string for null path");
 
     result = service.createSymlinkForMajorVersion(Paths.get("/tmp"), null);
@@ -417,18 +417,18 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
     Path docDir = versionDir.resolve("doc");
     Files.createDirectories(docDir);
 
-    String firstResult = service.createSymlinkForMajorVersion(docDir, "1.0");
+    String firstResult = service.createSymlinkForMajorVersion(docDir, TEST_VERSION);
     assertNotNull(firstResult, "Should create symlink first time");
 
-    String secondResult = service.createSymlinkForMajorVersion(docDir, "1.0");
+    String secondResult = service.createSymlinkForMajorVersion(docDir, TEST_VERSION);
     assertNotNull(secondResult, "Should return existing symlink path");
     assertEquals(firstResult, secondResult, "Should return same path");
   }
 
   @Test
   void testCreateSymlinkForMajorVersion_InvalidPathStructure() {
-    Path rootPath = Paths.get("/");
-    String result = service.createSymlinkForMajorVersion(rootPath, "1.0");
+    Path rootPath = Paths.get(CommonConstants.SLASH);
+    String result = service.createSymlinkForMajorVersion(rootPath, TEST_VERSION);
     assertEquals("", result, "Should return empty string for root path");
   }
 
@@ -446,44 +446,44 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
 
   @Test
   void testFindDocVersionsAndLanguages_DevVersionSorting() {
-    ExternalDocumentMeta devMeta = ExternalDocumentMeta.builder()
-        .productId(PORTAL)
-        .version("dev")
-        .language(DocumentLanguage.ENGLISH)
-        .relativeLink("docs/portal/dev/en")
-        .build();
+  ExternalDocumentMeta devMeta = ExternalDocumentMeta.builder()
+    .productId(PORTAL)
+    .version(DEV_VERSION)
+    .language(DocumentLanguage.ENGLISH)
+    .relativeLink("docs/portal/dev/en")
+    .build();
 
-    ExternalDocumentMeta normalMeta = ExternalDocumentMeta.builder()
-        .productId(PORTAL)
-        .version("10.0")
-        .language(DocumentLanguage.ENGLISH)
-        .relativeLink("docs/portal/10/en")
-        .build();
+  ExternalDocumentMeta normalMeta = ExternalDocumentMeta.builder()
+    .productId(PORTAL)
+    .version(TEST_VERSION)
+    .language(DocumentLanguage.ENGLISH)
+    .relativeLink("docs/portal/10/en")
+    .build();
 
-    when(externalDocumentMetaRepository.findByArtifactNameAndVersionIn(PORTAL, majorVersions))
-        .thenReturn(List.of(devMeta, normalMeta));
-    when(externalDocumentMetaRepository.findByArtifactNameAndVersionIn(PORTAL,
-        Collections.singletonList("dev")))
-        .thenReturn(List.of(devMeta));
+  when(externalDocumentMetaRepository.findByArtifactNameAndVersionIn(PORTAL, majorVersions))
+    .thenReturn(List.of(devMeta, normalMeta));
+  when(externalDocumentMetaRepository.findByArtifactNameAndVersionIn(PORTAL,
+    Collections.singletonList(DEV_VERSION)))
+    .thenReturn(List.of(devMeta));
 
     String host = "http://localhost:8080";
-    var result = service.findDocVersionsAndLanguages(PORTAL, "dev",
-        DocumentLanguage.ENGLISH.getCode(), host);
+  var result = service.findDocVersionsAndLanguages(PORTAL, DEV_VERSION,
+    DocumentLanguage.ENGLISH.getCode(), host);
 
     assertNotNull(result, "Result should not be null");
     assertEquals(2, result.getVersions().size(), "Should have two versions");
     // Dev version should be sorted last
-    assertEquals("dev", result.getVersions().get(1).getVersion(), "Dev should be last");
+  assertEquals(DEV_VERSION, result.getVersions().get(1).getVersion(), "Dev should be last");
   }
 
   @Test
   void testFindDocVersionsAndLanguages_LanguageFallback() {
-    ExternalDocumentMeta enMeta = ExternalDocumentMeta.builder()
-        .productId(PORTAL)
-        .version(TEST_VERSION)
-        .language(DocumentLanguage.ENGLISH)
-        .relativeLink("docs/portal/12/en")
-        .build();
+  ExternalDocumentMeta enMeta = ExternalDocumentMeta.builder()
+    .productId(PORTAL)
+    .version(TEST_VERSION)
+    .language(DocumentLanguage.ENGLISH)
+    .relativeLink("docs/portal/12/en")
+    .build();
 
     when(externalDocumentMetaRepository.findByArtifactNameAndVersionIn(PORTAL, majorVersions))
         .thenReturn(List.of(enMeta));
@@ -503,9 +503,9 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
 
   @Test
   void testFindExternalDocument_EmptyProduct() {
-    when(productRepository.findById("nonexistent")).thenReturn(Optional.empty());
+  when(productRepository.findById(NON_EXISTENT_PRODUCT)).thenReturn(Optional.empty());
 
-    var result = service.findExternalDocument("nonexistent", "10.0");
+  var result = service.findExternalDocument(NON_EXISTENT_PRODUCT, TEST_VERSION);
 
     assertNull(result, "Should return null for non-existent product");
     verify(externalDocumentMetaRepository, never()).findByProductIdAndLanguage(any(), any());
@@ -526,10 +526,10 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
         .thenReturn(List.of(meta));
 
     try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
-      mockedVersionFactory.when(() -> VersionFactory.getBestMatchMajorVersion(any(), eq("99.0"), any()))
+      mockedVersionFactory.when(() -> VersionFactory.getBestMatchMajorVersion(any(), eq(VERSION_INVALID), any()))
           .thenReturn(null);
 
-      var result = service.findExternalDocument(PORTAL, "99.0");
+      var result = service.findExternalDocument(PORTAL, VERSION_INVALID);
 
       assertNull(result, "Should return null when no matching version found");
     }
@@ -537,89 +537,76 @@ class ExternalDocumentServiceImplTest extends BaseSetup {
 
   @Test
   void testResolveBestMatchSymlinkVersion_BlankBestMatchVersion() {
-    try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
-      mockedVersionFactory.when(() -> VersionFactory.get(majorVersions, "99.0"))
-          .thenReturn("");
+  try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
+    mockedVersionFactory.when(() -> VersionFactory.get(majorVersions, VERSION_INVALID))
+      .thenReturn("");
 
-      String result = service.resolveBestMatchSymlinkVersion("portal", "portal-guide", "99.0",
-          DocumentLanguage.ENGLISH);
+    String result = service.resolveBestMatchSymlinkVersion(PORTAL, ARTIFACT_NAME, VERSION_INVALID,
+      DocumentLanguage.ENGLISH);
 
-      assertEquals("", result, "Should return empty string when bestMatchVersion is blank");
-    }
+    assertEquals("", result, "Should return empty string when bestMatchVersion is blank");
+  }
   }
 
   @Test
   void testResolveBestMatchSymlinkVersion_NullBestMatchVersion() {
-    try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
-      mockedVersionFactory.when(() -> VersionFactory.get(majorVersions, "99.0"))
-          .thenReturn(null);
+  try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
+    mockedVersionFactory.when(() -> VersionFactory.get(majorVersions, VERSION_INVALID))
+      .thenReturn(null);
 
-      String result = service.resolveBestMatchSymlinkVersion("portal", "portal-guide", "99.0",
-          DocumentLanguage.ENGLISH);
+    String result = service.resolveBestMatchSymlinkVersion(PORTAL, ARTIFACT_NAME, VERSION_INVALID,
+      DocumentLanguage.ENGLISH);
 
-      assertEquals("", result, "Should return empty string when bestMatchVersion is null");
-    }
+    assertEquals("", result, "Should return empty string when bestMatchVersion is null");
+  }
   }
 
   @Test
   void testResolveBestMatchSymlinkVersion_Success() {
-    try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
-      mockedVersionFactory.when(() -> VersionFactory.get(majorVersions, "10.5"))
-          .thenReturn("10.0");
+  try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
+    mockedVersionFactory.when(() -> VersionFactory.get(majorVersions, TEST_VERSION_12_5))
+      .thenReturn(TEST_VERSION);
 
-      String result = service.resolveBestMatchSymlinkVersion("portal", "portal-guide", "10.5",
-          DocumentLanguage.ENGLISH);
+    String result = service.resolveBestMatchSymlinkVersion(PORTAL, ARTIFACT_NAME, TEST_VERSION_12_5,
+      DocumentLanguage.ENGLISH);
 
-      assertNotNull(result, "Should return symlink path");
-      assertTrue(result.contains("portal"), "Should contain product name");
-      assertTrue(result.contains("10.0"), "Should contain matched version");
-    }
+    assertNotNull(result, "Should return symlink path");
+    assertTrue(result.contains(PORTAL), "Should contain product name");
+    assertTrue(result.contains(TEST_VERSION), "Should contain matched version");
+  }
   }
 
   @Test
   void testResolveBestMatchSymlinkVersion_MissingParameters() {
-    String result = service.resolveBestMatchSymlinkVersion(null, "portal-guide", "10.0",
-        DocumentLanguage.ENGLISH);
-    assertEquals("", result, "Should return empty string for null productName");
+  String result = service.resolveBestMatchSymlinkVersion(null, ARTIFACT_NAME, TEST_VERSION,
+    DocumentLanguage.ENGLISH);
+  assertEquals("", result, "Should return empty string for null productName");
 
-    result = service.resolveBestMatchSymlinkVersion("portal", null, "10.0",
-        DocumentLanguage.ENGLISH);
-    assertEquals("", result, "Should return empty string for null artifactName");
+  result = service.resolveBestMatchSymlinkVersion(PORTAL, null, TEST_VERSION,
+    DocumentLanguage.ENGLISH);
+  assertEquals("", result, "Should return empty string for null artifactName");
 
-    result = service.resolveBestMatchSymlinkVersion("portal", "portal-guide", null,
-        DocumentLanguage.ENGLISH);
-    assertEquals("", result, "Should return empty string for null version");
+  result = service.resolveBestMatchSymlinkVersion(PORTAL, ARTIFACT_NAME, null,
+    DocumentLanguage.ENGLISH);
+  assertEquals("", result, "Should return empty string for null version");
 
-    result = service.resolveBestMatchSymlinkVersion("", "portal-guide", "10.0",
-        DocumentLanguage.ENGLISH);
-    assertEquals("", result, "Should return empty string for empty productName");
-  }
-
-  @Test
-  void testResolveBestMatchSymlinkVersion_ExceptionHandling() {
-    try (MockedStatic<VersionFactory> mockedVersionFactory = mockStatic(VersionFactory.class)) {
-      mockedVersionFactory.when(() -> VersionFactory.get(majorVersions, "10.0"))
-          .thenThrow(new RuntimeException("Version error"));
-
-      String result = service.resolveBestMatchSymlinkVersion("portal", "portal-guide", "10.0",
-          DocumentLanguage.ENGLISH);
-
-      assertEquals("", result, "Should return empty string on exception");
-    }
+  result = service.resolveBestMatchSymlinkVersion("", ARTIFACT_NAME, TEST_VERSION,
+    DocumentLanguage.ENGLISH);
+  assertEquals("", result, "Should return empty string for empty productName");
   }
 
   @Test
   void testFindBestMatchVersion_ProductNotFound() {
-    String productId = "nonexistent";
-    String version = "3.0.0";
+  String productId = NON_EXISTENT_PRODUCT;
+  String version = "3.0.0";
 
-    when(productRepository.findById(productId)).thenReturn(Optional.empty());
+  when(productRepository.findById(productId)).thenReturn(Optional.empty());
 
-    String result = service.findBestMatchVersion(productId, version);
+  String result = service.findBestMatchVersion(productId, version);
 
-    assertNull(result, "Should return null when product not found");
-    verify(productRepository).findById(productId);
-    verify(externalDocumentMetaRepository, never()).findByProductId(any());
+  assertNull(result, "Should return null when product not found");
+  verify(productRepository).findById(productId);
+  verify(externalDocumentMetaRepository, never()).findByProductId(any());
   }
 
   @Test
